--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,33 @@
-apply plugin: 'war'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.1.RELEASE")
+    }
+}
+
+apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
+
+jar {
+    baseName = 'learn-hibernate'
+    version = '0.1.0'
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    // Actuator
+    compile("org.springframework.boot:spring-boot-starter-actuator")
+    // Enable Tomcat starter at compile time
+    compile("org.springframework.boot:spring-boot-starter-tomcat")
+    // Spring boot starter data jpa
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    // JUnit
+    testCompile("junit:junit")
     // Spring MVC
     compile group: 'org.springframework', name: 'spring-webmvc', version: '4.2.1.RELEASE'
     // Servlet API
@@ -17,17 +40,8 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.3'
     //  JSON
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.4'
-    //  Spring Data JPA
-    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.9.1.RELEASE'
-    // Java Persistence API
-    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.0.Final'
     // Data source
     compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
     // In memory DB
     compile group: 'org.hsqldb', name: 'hsqldb', version: '2.2.8'
-    // Hibernate core
-    compile group: 'org.hibernate', name: 'hibernate-core', version: '4.1.9.Final'
-    // Hibernate entity manager
-    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '4.1.9.Final'
 }
-
