--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,1 @@
-server.port=8080
-spring.datasource.schema=classpath:db/scripts/schema.sql
-spring.datasource.data=classpath:db/scripts/data.sql
+spring.profiles.active=dev
