--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,15 @@ dependencies {
     compile group: 'org.hibernate', name: 'hibernate-core', version: '4.1.9.Final'
     // Hibernate entity manager
     compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '4.1.9.Final'
+    // MariaDB JDBC driver
+    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '1.1.7'
+    // Google Guava Lib
+    compile group: 'com.google.guava', name: 'guava', version: '21.0'
+
+    // JUNIT
+    compile group: 'junit', name: 'junit', version: '4.12'
+    //Spring Test
+    compile group: 'org.springframework', name: 'spring-test', version: '4.2.1.RELEASE'
+
 }
 
