--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language : java
 jdk:
   - oraclejdk8
+  before_script:
+      - wget http://services.gradle.org/distributions/gradle-3.3-bin.zip
+      - unzip gradle-3.3-bin.zip
+      - export GRADLE_HOME=$PWD/gradle-3.3
+      - export PATH=$GRADLE_HOME/bin:$PATH
