--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mariadb://localhost:3306/learn
+spring.datasource.url=jdbc:mariadb://localhost:3306
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
-# todo: remove when tests will work as expected
-spring.profiles.active=dev
