--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ addons:
   mariadb: '10.0'
 before_install:
 - chmod +x gradlew
+- mysql -e 'DROP DATABASE IF EXISTS learn_test;'
+- mysql -e 'CREATE DATABASE learn_test;'
 deploy:
   provider: heroku
   api_key:
