--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mariadb://localhost:3306
+spring.datasource.url=jdbc:mariadb://localhost:3306/learn
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.schema=classpath:db/scripts/schema.sql
+spring.datasource.data=classpath:db/scripts/data.sql
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
