--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mariadb://localhost:3306/learn
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:p6spy:mariadb://localhost:3306/learn
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 spring.datasource.schema=classpath:db/scripts/schema.sql
 spring.datasource.data=classpath:db/scripts/data.sql
-
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
+server.port=8081
