--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,4 @@
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.url=jdbc:mariadb://localhost:3306/learn_test
+spring.datasource.url=jdbc:p6spy:mariadb://localhost:3306/learn_test
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
