finilized isolation levels tests

--- a/build.gradle
+++ b/build.gradle
@@ -63,4 +63,7 @@ dependencies {
     compile "p6spy:p6spy:3.0.0"
     // apache commons
     compile  group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+    // awaitility DSL
+    compile 'org.awaitility:awaitility-proxy:3.0.0-rc1'
+
 }
