--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,9 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'war'
 
-jar {
+war {
     baseName = 'learn-hibernate'
     version = '0.1.0'
 }
@@ -21,7 +22,7 @@ repositories {
 
 dependencies {
     // Enable Tomcat starter at compile time
-    compile("org.springframework.boot:spring-boot-starter-tomcat")
+    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
     // Spring boot starter data jpa
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     // Spring MVC
