--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=jenkins
+spring.datasource.password=jenkins
 spring.datasource.url=jdbc:mariadb://localhost:3306/learn
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.schema=classpath:db/scripts/schema.sql
